WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123492
[GTK] Undefined references to RenderObject::style() when disabling video support
https://bugs.webkit.org/show_bug.cgi?id=123492
Summary
[GTK] Undefined references to RenderObject::style() when disabling video support
Ben Boeckel
Reported
2013-10-29 21:30:09 PDT
Looks like something got nuked (similar errors with WebKit1 support enabled as well): CXXLD libwebkit2gtk-3.0.la CXXLD Programs/WebKitWebProcess CXXLD Programs/WebKitPluginProcess CCLD Programs/MiniBrowser ./.libs/libwebkit2gtk-3.0.so: undefined reference to `_ZNK7WebCore12RenderObject5styleEv' collect2: error: ld returned 1 exit status make[1]: *** [Programs/WebKitWebProcess] Error 1 ./.libs/libwebkit2gtk-3.0.so: undefined reference to `_ZNK7WebCore12RenderObject5styleEv' collect2: error: ld returned 1 exit status make[1]: *** [Programs/MiniBrowser] Error 1 Source/WebCore/platform/gtk/.libs/libWebCoreGtk2_la-RenderThemeGtk2.o: In function `paintToggle': /home/boeckb/misc/code/webkit-git/b/../Source/WebCore/platform/gtk/RenderThemeGtk2.cpp:166: undefined reference to `_ZNK7WebCore12RenderObject5styleEv' Source/WebCore/platform/gtk/.libs/libWebCoreGtk2_la-RenderThemeGtk2.o: In function `_ZN7WebCore14RenderThemeGtk11paintButtonEPNS_12RenderObjectERKNS_9PaintInfoERKNS_7IntRectE': /home/boeckb/misc/code/webkit-git/b/../Source/WebCore/platform/gtk/RenderThemeGtk2.cpp:241: undefined reference to `_ZNK7WebCore12RenderObject5styleEv' Source/WebCore/platform/gtk/.libs/libWebCoreGtk2_la-RenderThemeGtk2.o: In function `_ZN7WebCore14RenderThemeGtk14paintTextFieldEPNS_12RenderObjectERKNS_9PaintInfoERKNS_7IntRectE': /home/boeckb/misc/code/webkit-git/b/../Source/WebCore/platform/gtk/RenderThemeGtk2.cpp:432: undefined reference to `_ZNK7WebCore12RenderObject5styleEv' Source/WebCore/platform/gtk/.libs/libWebCoreGtk2_la-RenderThemeGtk2.o: In function `_ZN7WebCore14RenderThemeGtk16paintSliderTrackEPNS_12RenderObjectERKNS_9PaintInfoERKNS_7IntRectE': /home/boeckb/misc/code/webkit-git/b/../Source/WebCore/platform/gtk/RenderThemeGtk2.cpp:473: undefined reference to `_ZNK7WebCore12RenderObject5styleEv' /home/boeckb/misc/code/webkit-git/b/../Source/WebCore/platform/gtk/RenderThemeGtk2.cpp:486: undefined reference to `_ZNK7WebCore12RenderObject5styleEv' Source/WebCore/platform/gtk/.libs/libWebCoreGtk2_la-RenderThemeGtk2.o:/home/boeckb/misc/code/webkit-git/b/../Source/WebCore/platform/gtk/RenderThemeGtk2.cpp:501: more undefined references to `_ZNK7WebCore12RenderObject5styleEv' follow
Attachments
config.log
(77.02 KB, application/octet-stream)
2013-10-30 18:05 PDT
,
Ben Boeckel
no flags
Details
Patch
(1.96 KB, patch)
2013-10-31 01:47 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2013-10-29 23:32:37 PDT
Can you please attach the config.log file?
Ben Boeckel
Comment 2
2013-10-30 18:05:09 PDT
Created
attachment 215588
[details]
config.log This is the config.log with webkit1 disabled.
Zan Dobersek
Comment 3
2013-10-31 01:35:40 PDT
Thanks. Uploading a fix shortly.
Zan Dobersek
Comment 4
2013-10-31 01:47:22 PDT
Created
attachment 215630
[details]
Patch
Carlos Garcia Campos
Comment 5
2013-10-31 01:52:39 PDT
Comment on
attachment 215630
[details]
Patch Thanks!
Zan Dobersek
Comment 6
2013-10-31 02:12:59 PDT
Comment on
attachment 215630
[details]
Patch Clearing flags on attachment: 215630 Committed
r158355
: <
http://trac.webkit.org/changeset/158355
>
Zan Dobersek
Comment 7
2013-10-31 02:13:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug