[GTK] Undefined references to RenderObject::style() when disabling video support https://bugs.webkit.org/show_bug.cgi?id=123492

Reviewed by Carlos Garcia Campos.

* platform/gtk/RenderThemeGtk2.cpp: Disabling video support removes indirect inclusion of the RenderElement.h
header, causing undefined references to RenderObject::style(). The RenderElement.h header should be included
instead of RenderObject.h as the former defines the RenderObject::style() inline and also includes the latter.
* platform/gtk/RenderThemeGtk3.cpp: Ditto.


Canonical link: https://commits.webkit.org/141722@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158355 268f45cc-cd09-0410-ab3c-d52691b4dbfc